# crypto-quant-signal

./: .gitignore  .importlinter  AGENTS.md  GOALS.md  README.md  crypto_quant_architecture.md  docker-compose.yml  pyproject.toml
.claude/: launch.json
.github/workflows/: ci.yml
configs/runtime/: paper_runtime.yaml
demo/candles/: BTCUSDT_1d.jsonl  ETHUSDT_1d.jsonl  README.md
docs/: ENGINEERING_DECISIONS.md  RUNBOOK_DAILY_CYCLE_RELIABILITY.md  RUNBOOK_DISCORD_NOTIFICATIONS.md
docs/contracts/: AUTONOMOUS_RESEARCH_LOOP.md  PRE_HOLDOUT_PROTOCOL.md  PUBLIC_DATA_SMOKE_CONTRACT.md  RISK_GATE_CONTRACT.md  STRATEGY_CONFIRMED_TREND_ENSEMBLE.md  STRATEGY_DAILY_TREND_ENSEMBLE.md  STRATEGY_LARGE_LIQUID_TREND_15.md  UNIVERSE_CONTRACT.md  VALIDATION_GATE_CONTRACT.md
docs/plans/: PRODUCT_OPTIMIZATION_PLAN.md  TW_STOCK_VERSION_PLAN.md
docs/reports/: CORE_MVP_COMPLETION.md  SYSTEM_AUDIT_2026-07-03.md
docs/research/: EXTERNAL_EVIDENCE_2026-07.md  GOALP_EXPERIMENT1_RESULT.md  GOALP_EXPERIMENT2_PREREGISTRATION.md  GOALP_EXPERIMENT2_RESULT.md  GOALP_EXPERIMENT3_PREREGISTRATION.md  GOALP_EXPERIMENT3_RESULT.md  GOALP_EXPERIMENT4_PREREGISTRATION.md  GOALP_EXPERIMENT4_RESULT.md  GOALP_EXPERIMENT5_PREREGISTRATION.md  GOALP_EXPERIMENT5_RESULT.md  GOALP_EXPERIMENT6_PREREGISTRATION.md  GOALP_EXPERIMENT6_RESULT.md  GOALP_EXPERIMENT7_PREREGISTRATION.md  GOALP_EXPERIMENT7_RESULT.md  GOALP_EXPERIMENT8_PREREGISTRATION.md  GOALP_EXPERIMENT8_RESULT.md  GOALP_PREREGISTRATION.md  LOOP_LOG.md  N_ARITHMETIC_2026-07-23.md  RESEARCH_LOG.md  SIGNAL_DESIGN_RESEARCH.md  SIGNAL_DESIGN_RESEARCH_EN.md  UNIVERSE_EXPANSION.md  WHIPSAW_DIAGNOSTIC.md
requirements/: constraints-dev.txt
scripts/: __init__.py  analyze_whipsaw.py  backup_runtime_store.ps1  harden_daily_task.ps1  ingest_public_ohlcv.py  log_fill.py  make_report.py  register_research_loop_task.ps1  run_backtest.py  run_combo_family.py  run_cs_family.py  run_daily_cycle.cmd  run_dashboard.py  run_demo.py  run_donchian13_family.py  run_donchian_family.py  run_gate_family.py  run_gate_report.py  run_paper_runtime.py  run_research_loop.ps1  run_trendfactor_family.py  run_vol_family.py  slice_preholdout.py
src/: __init__.py  binance_public_hosts.py  py.typed
src/accounting/: __init__.py  ledger.py  types.py
src/api/: __init__.py  app.py  page.py
src/backtest/: __init__.py  engine.py  holdout.py  registry.py  runner.py  types.py  validation.py
src/config/: __init__.py  models.py
src/data/: __init__.py  binance.py  files.py  quality.py  smoke.py  types.py
src/domain/: __init__.py  types.py
src/execution/: __init__.py  broker.py  types.py
src/features/: __init__.py  daily_trend.py  pipeline.py  types.py
src/monitoring/: __init__.py
src/notify/: __init__.py  channels.py  messages.py  types.py
src/portfolio/: __init__.py  ladder.py  targets.py  types.py
src/risk/: __init__.py  events.py  gate.py  (+1 more)
(+155 files in other folders)
